--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,14 @@
-image: mono:latest
-
 stages:
     - build
-    - test
 
 variables:
     msbuild: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\MSBuild\Current\Bin\MSBuild.exe'
     solution: "Astra.sln"
-    test: "Astra.Test"
 
 build_windows:
     stage: build
     script:
-        - '& "$msbuild" -help'
+        - msbuild Astra.sln /t:Rebuild /p:Configuration=Release /p:Platform="x86" /m
     tags:
         - shared-windows
         - windows
