--- a/Astra.Core/Astra.Core.vcxproj.filters
+++ b/Astra.Core/Astra.Core.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="src\graphics\entities\Terrain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\graphics\renderers\TerrainRenderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\math\Mat4.h">
@@ -173,11 +176,18 @@
     <ClInclude Include="src\graphics\entities\Terrain.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\graphics\renderers\TerrainRenderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\graphics\shaders\TerrainShader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\resources\shaders\Gui.shader" />
     <None Include="src\resources\shaders\Basic.shader" />
     <None Include="src\resources\shaders\Lighting.shader" />
+    <None Include="src\resources\shaders\Terrain.shader" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="src\resources\textures\test1.jpg">
