Astra-9-Initial implementation of blendmap terrains using multi-texturing.

--- a/TestGame/TestGame.vcxproj
+++ b/TestGame/TestGame.vcxproj
@@ -199,9 +199,13 @@
     </Text>
   </ItemGroup>
   <ItemGroup>
+    <Image Include="res\textures\blendMap.png" />
     <Image Include="res\textures\fernTexture.png" />
     <Image Include="res\textures\grass.jpg" />
+    <Image Include="res\textures\grassFlowers.png" />
     <Image Include="res\textures\grassTexture.png" />
+    <Image Include="res\textures\mud.png" />
+    <Image Include="res\textures\path.png" />
     <Image Include="res\textures\purple.jpg" />
     <Image Include="res\textures\red.jpg" />
     <Image Include="res\textures\test1.jpg" />
