--- a/TestGame/TestGame.vcxproj.filters
+++ b/TestGame/TestGame.vcxproj.filters
@@ -49,6 +49,18 @@
     <Image Include="res\textures\test1.jpg">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\textures\blendMap.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\textures\grassFlowers.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\textures\mud.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\textures\path.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Player.h">
