--- a/TestGame/TestGame.vcxproj.filters
+++ b/TestGame/TestGame.vcxproj.filters
@@ -61,6 +61,9 @@
     <Image Include="res\textures\path.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\textures\heightmap.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Player.h">
