Astra-12-Abstracted skybox into material and exposed variables to create day/night cycles.

--- a/Astra.Core/Astra.Core.vcxproj
+++ b/Astra.Core/Astra.Core.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="src\graphics\loaders\Loader.cpp" />
     <ClCompile Include="src\graphics\loaders\ObjLoader.cpp" />
     <ClCompile Include="src\graphics\materials\ImageMaterial.cpp" />
+    <ClCompile Include="src\graphics\materials\SkyboxMaterial.cpp" />
     <ClCompile Include="src\graphics\materials\TerrainMaterial.cpp" />
     <ClCompile Include="src\graphics\renderers\Entity3dRenderer.cpp" />
     <ClCompile Include="src\graphics\renderers\GuiRenderer.cpp" />
@@ -197,6 +198,7 @@
     <ClInclude Include="src\graphics\buffers\CubeMapTexture.h" />
     <ClInclude Include="src\graphics\materials\ImageMaterial.h" />
     <ClInclude Include="src\graphics\materials\Materials.h" />
+    <ClInclude Include="src\graphics\materials\SkyboxMaterial.h" />
     <ClInclude Include="src\graphics\materials\TerrainMaterial.h" />
     <ClInclude Include="src\graphics\buffers\Texture.h" />
     <ClInclude Include="src\graphics\buffers\VertexArray.h" />
