--- a/Astra.Core/Astra.Core.vcxproj
+++ b/Astra.Core/Astra.Core.vcxproj
@@ -179,6 +179,7 @@
     <ClCompile Include="src\graphics\materials\ImageMaterial.cpp" />
     <ClCompile Include="src\graphics\materials\SkyboxMaterial.cpp" />
     <ClCompile Include="src\graphics\materials\TerrainMaterial.cpp" />
+    <ClCompile Include="src\graphics\materials\WaterMaterial.cpp" />
     <ClCompile Include="src\graphics\renderers\Entity3dRenderer.cpp" />
     <ClCompile Include="src\graphics\renderers\GuiRenderer.cpp" />
     <ClCompile Include="src\graphics\renderers\Renderer.cpp" />
@@ -215,6 +216,7 @@
     <ClInclude Include="src\graphics\entities\Terrain.h" />
     <ClInclude Include="src\graphics\loaders\Loader.h" />
     <ClInclude Include="src\graphics\loaders\ObjLoader.h" />
+    <ClInclude Include="src\graphics\materials\WaterMaterial.h" />
     <ClInclude Include="src\graphics\renderers\Entity3dRenderer.h" />
     <ClInclude Include="src\graphics\renderers\GuiRenderer.h" />
     <ClInclude Include="src\graphics\renderers\RendererController.h" />
