Astra-16-Initial skeleton font classes commit.

--- a/Astra.Core/Astra.Core.vcxproj
+++ b/Astra.Core/Astra.Core.vcxproj
@@ -206,6 +206,12 @@
     <ClInclude Include="src\graphics\buffers\FrameBuffer.h" />
     <ClInclude Include="src\graphics\buffers\WaterFrameBuffer.h" />
     <ClInclude Include="src\graphics\entities\WaterTile.h" />
+    <ClInclude Include="src\graphics\fonts\Character.h" />
+    <ClInclude Include="src\graphics\fonts\Font.h" />
+    <ClInclude Include="src\graphics\fonts\GuiText.h" />
+    <ClInclude Include="src\graphics\fonts\Line.h" />
+    <ClInclude Include="src\graphics\fonts\MetaFile.h" />
+    <ClInclude Include="src\graphics\fonts\TextMesh.h" />
     <ClInclude Include="src\graphics\materials\ImageMaterial.h" />
     <ClInclude Include="src\graphics\materials\Materials.h" />
     <ClInclude Include="src\graphics\materials\SkyboxMaterial.h" />
